samples/_failures_safe/1761347412_b04cd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3593e607.c: In function ‘main’:
./samples/SAFE/__tmp_3593e607.c:139:5: error: expected expression at end of input
  139 |     print_compression_info(&
      |     ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3593e607.c:139:5: error: expected declaration or statement at end of input
